--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
 
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <title>React Chrome Extension</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this extension.</noscript>
+    <link href="/static/css/main.f9cf1438.chunk.css" rel="stylesheet">
+    <script src="https://js.stripe.com/v3" async></script>
+</head>
+
+<body><noscript>You need to enable JavaScript to run this extension.</noscript>
     <div id="root"></div>
-  </body>
+    <script src="/static/js/runtime-main.d1432c55.js"></script>
+    <script src="/static/js/2.c35d2ee7.chunk.js"></script>
+    <script src="/static/js/main.57ffc709.chunk.js"></script>
+</body>
+
 </html>
